--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,9 @@ dependencies {
   androidTestImplementation 'androidx.test.ext:junit:1.1.3'
   testImplementation "junit:junit:$junit_version"
   androidTestImplementation "androidx.test:runner:$testrunner_version"
+
+  //Room
+  implementation "androidx.room:room-runtime:$room_version"
+  kapt "androidx.room:room-compiler:$room_version"
+
 }
