--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,11 @@ dependencies {
   implementation "androidx.room:room-runtime:$room_version"
   kapt "androidx.room:room-compiler:$room_version"
 
+  // architecture components
+  implementation "androidx.arch.core:core-common:2.1.0"
+  implementation "androidx.lifecycle:lifecycle-common:2.3.1"
+  implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+  implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+
+
 }
